# currency-fetcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-16-json-output.md  2026-03-18-rust-review-fixes.md  2026-03-18-rust-review-fixes.md.tasks.json
docs/superpowers/specs/: 2026-03-16-json-output-design.md  2026-03-18-coverage-and-ci-design.md
src/: display.rs  main.rs  models.rs  output.rs
src/banks/: cbr.rs  mod.rs  nbg.rs  nbp.rs  nbrb.rs  util.rs
