[package]
name = "currency-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
wiremock = "0.6"
